@@ -9,142 +9,28 @@
 package org.sosy_lab.java_smt.solvers.yices2;
 
 import static com.google.common.base.Preconditions.checkArgument;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_ABS;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_AND;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_APP_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_ARITH_CONST;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_ARITH_GE_ATOM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_ARITH_SUM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_ARRAY_SELECT;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BIT_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BOOL_CONST;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_ARRAY;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_ASHR;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_CONST;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_DIV;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_GE_ATOM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_LSHR;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_MUL;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_REM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_SDIV;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_SGE_ATOM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_SHL;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_SMOD;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_SREM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_BV_SUM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_CEIL;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_DISTINCT_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_DIVIDES_ATOM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_EQ_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_FLOOR;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_FORALL_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_IDIV;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_IMOD;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_IS_INT_ATOM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_ITE_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_LAMBDA_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_NOT_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_OR_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_POWER_PRODUCT;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_RDIV;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_SELECT_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_UNINTERPRETED_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_UPDATE_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_VARIABLE;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.YICES_XOR_TERM;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_abs;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_and;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_application;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_arith_geq_atom;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bitextract;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bool_const_value;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bool_type;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bv_const_value;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bv_type;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvarray;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvashr;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvconst_from_array;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvdiv;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvge_atom;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvlshr;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvmul;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvpower;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvproduct;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvrem;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvsdiv;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvsge_atom;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvshl;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvsmod;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvsrem;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvsum;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvsum_component;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_bvtype_size;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_ceil;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_distinct;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_divides_atom;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_division;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_eq;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_floor;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_function_type;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_get_term_by_name;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_get_term_name;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_idiv;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_imod;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_int32;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_int_type;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_is_int_atom;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_ite;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_mul;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_new_uninterpreted_term;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_new_variable;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_not;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_or;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_parse_rational;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_power;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_product;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_product_component;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_proj_arg;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_proj_index;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_rational_const_value;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_real_type;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_set_term_name;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_subst_term;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_sum;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_sum_component;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_term_bitsize;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_term_child;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_term_constructor;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_term_is_int;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_term_num_children;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_term_to_string;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_true;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_child;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_is_bitvector;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_is_bool;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_is_function;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_is_int;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_is_real;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_of_term;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_type_to_string;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_update;
-import static org.sosy_lab.java_smt.solvers.yices2.Yices2NativeApi.yices_xor;
+import static org.sosy_lab.common.collect.Collections3.transformedImmutableListCopy;
 
-import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
-import com.google.common.collect.Collections2;
+import com.google.common.collect.FluentIterable;
 import com.google.common.collect.HashBasedTable;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Table;
 import com.google.common.primitives.Ints;
+import com.sri.yices.BigRational;
+import com.sri.yices.Constructor;
+import com.sri.yices.ProductComponent;
+import com.sri.yices.SumComponent;
+import com.sri.yices.Terms;
+import com.sri.yices.Types;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.sosy_lab.common.rationals.Rational;
 import org.sosy_lab.java_smt.api.ArrayFormula;
 import org.sosy_lab.java_smt.api.BitvectorFormula;
@@ -167,14 +53,6 @@ import org.sosy_lab.java_smt.solvers.yices2.Yices2Formula.Yices2RationalFormula;
 @SuppressWarnings({"ClassTypeParameterName", "MethodTypeParameterName"})
 class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Integer> {
 
-  private static final ImmutableSet<Integer> CONSTANT_AND_VARIABLE_CONSTRUCTORS =
-      ImmutableSet.of(
-          YICES_BOOL_CONST,
-          YICES_ARITH_CONST,
-          YICES_BV_CONST,
-          YICES_VARIABLE,
-          YICES_UNINTERPRETED_TERM);
-
   /**
    * Maps a name and a free variable or function type to a concrete formula node. We allow only 1
    * type per var name, meaning there is only 1 column per row!
@@ -190,12 +68,12 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
   private final Set<Integer> ufSymbols = new HashSet<>();
 
   Yices2FormulaCreator() {
-    super(null, yices_bool_type(), yices_int_type(), yices_real_type(), null, null);
+    super(null, Types.boolType(), Types.intType(), Types.realType(), null, null);
   }
 
   @Override
   public Integer getBitvectorType(int pBitwidth) {
-    return yices_bv_type(pBitwidth);
+    return Types.bvType(pBitwidth);
   }
 
   @Override
@@ -205,7 +83,7 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
 
   @Override
   public Integer getArrayType(Integer pIndexType, Integer pElementType) {
-    return yices_function_type(1, new int[] {pIndexType}, pElementType);
+    return Types.functionType(pIndexType, pElementType);
   }
 
   @Override
@@ -242,7 +120,7 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
                 && FormulaType.IntegerType.equals(getFormulaType(pTerm)))
             || pType.equals(getFormulaType(pTerm))
         : "Trying to encapsulate formula %s of type %s as %s"
-            .formatted(yices_term_to_string(pTerm), getFormulaType(pTerm), pType);
+            .formatted(Terms.toString(pTerm), getFormulaType(pTerm), pType);
     if (pType.isBooleanType()) {
       return (T) new Yices2BooleanFormula(pTerm);
     } else if (pType.isIntegerType()) {
@@ -285,10 +163,10 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
   @Override
   public <T extends Formula> FormulaType<T> getFormulaType(T pFormula) {
     if (pFormula instanceof BitvectorFormula) {
-      int type = yices_type_of_term(extractInfo(pFormula));
-      return (FormulaType<T>) FormulaType.getBitvectorTypeWithSize(yices_bvtype_size(type));
+      int type = Terms.typeOf(extractInfo(pFormula));
+      return (FormulaType<T>) FormulaType.getBitvectorTypeWithSize(Types.bvSize(type));
     } else if (pFormula instanceof ArrayFormula) {
-      return (FormulaType<T>) convertType(yices_type_of_term(extractInfo(pFormula)));
+      return (FormulaType<T>) convertType(Terms.typeOf(extractInfo(pFormula)));
     } else {
       return super.getFormulaType(pFormula);
     }
@@ -296,26 +174,27 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
 
   @Override
   public FormulaType<?> getFormulaType(Integer pFormula) {
-    return convertType(yices_type_of_term(pFormula));
+    return convertType(Terms.typeOf(pFormula));
   }
 
   /** Convert from Yices2 types to JavaSMT FormulaTypes. */
   private FormulaType<?> convertType(Integer pType) {
-    if (yices_type_is_bool(pType)) {
+    if (Types.isBool(pType)) {
       return FormulaType.BooleanType;
-    } else if (yices_type_is_int(pType)) {
+    } else if (Types.isInt(pType)) {
       return FormulaType.IntegerType;
-    } else if (yices_type_is_real(pType)) {
+    } else if (Types.isReal(pType)) {
       return FormulaType.RationalType;
-    } else if (yices_type_is_bitvector(pType)) {
-      return FormulaType.getBitvectorTypeWithSize(yices_bvtype_size(pType));
-    } else if (yices_type_is_function(pType)) {
-      var domain = yices_type_child(pType, 0);
-      var range = yices_type_child(pType, 1);
+    } else if (Types.isBitvector(pType)) {
+      return FormulaType.getBitvectorTypeWithSize(Types.bvSize(pType));
+    } else if (Types.isFunction(pType)) {
+      var domain = Types.child(pType, 0);
+      var range = Types.child(pType, 1);
       return FormulaType.getArrayType(convertType(domain), convertType(range));
+    } else {
+      throw new IllegalArgumentException(
+          "Unknown formula type '%s'".formatted(Types.toString(pType)));
     }
-    throw new IllegalArgumentException(
-        "Unknown formula type '%s'".formatted(yices_type_to_string(pType)));
   }
 
   /** Creates a named, free variable. Might retrieve it from the cache if created prior. */
@@ -328,20 +207,22 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
         !formulaCache.containsRow(name),
         "Symbol '%s' already used for a variable of type '%s'",
         name,
-        formulaCache.row(name));
+        formulaCache.containsRow(name)
+            ? Types.toString(formulaCache.row(name).keySet().iterator().next())
+            : "");
 
-    int var = yices_new_uninterpreted_term(type);
+    int var = Terms.newUninterpretedTerm(type);
     // Names in Yices2 behave like a stack. The last variable named is retrieved when asking for
     // a term with a specific name. Since we substitute free vars with bound for quantifiers,
     // this sometimes mixes them up, hence we track them ourselves.
-    yices_set_term_name(var, name);
+    Terms.setName(var, name);
     formulaCache.put(name, type, var);
     return var;
   }
 
   protected int createBoundVariableFromFreeVariable(int unboundVar) {
-    int type = yices_type_of_term(unboundVar);
-    String name = yices_get_term_name(unboundVar);
+    int type = Terms.typeOf(unboundVar);
+    String name = Terms.getName(unboundVar);
 
     // Search for recently created bound variables and re-use it
     // (Names work like a stack in Yices2. If we associate a term with a name, we get that term
@@ -349,17 +230,17 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
     // them with the same name as the free variable (so that it has the same name). This pushes the
     // name stack, and we get the bound var when asking yices_get_term_by_name(). We want to
     // re-use the bound variables here, but never the free ones.)
-    int termFromName = yices_get_term_by_name(name);
+    int termFromName = Terms.getByName(name);
     if (termFromName != -1) {
-      int termFromNameType = yices_type_of_term(termFromName);
+      int termFromNameType = Terms.typeOf(termFromName);
       checkArgument(
           type == termFromNameType,
           "Cannot override symbol '%s' with new symbol '%s' of type '%s'",
-          yices_type_to_string(termFromNameType),
+          Types.toString(termFromNameType),
           name,
-          yices_type_to_string(type));
-      int constructor = yices_term_constructor(termFromName);
-      if (constructor == YICES_VARIABLE) {
+          Types.toString(type));
+      Constructor constructor = Terms.constructor(termFromName);
+      if (constructor == Constructor.VARIABLE) {
         // Already a bound var
         return termFromName;
       }
@@ -367,7 +248,7 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
 
     // reset term name binding
     // TODO: add yices_remove_term_name();
-    int bound = yices_new_variable(type);
+    int bound = Terms.newVariable(type);
     // Names in Yices2 behave like a stack. The last variable named is retrieved when asking for
     // a term with a specific name. Since we substitute free vars with bound for quantifiers,
     // this sometimes mixes them up, hence we track them ourselves.
@@ -375,33 +256,40 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
     // Meaning that if we remove the new name, the old term gets its name back.
     // Since we just want to retrieve the same var for the quantifier we are currently building,
     // this is fine.
-    yices_set_term_name(bound, name);
+    Terms.setName(bound, name);
     return bound;
   }
 
-  @SuppressWarnings("deprecation")
+  /**
+   * Returns the name of a variable or uf term.
+   *
+   * <p>Will return an abstract value name if the term has no name. Yices may introduce unnamed
+   * terms while rewriting bv operations
+   */
+  private String lookupName(int term) {
+    return Terms.getName(term) == null ? "@" + term : Terms.getName(term);
+  }
+
   @Override
   public <R> R visit(FormulaVisitor<R> pVisitor, Formula pFormula, Integer pF) {
-    int constructor = yices_term_constructor(pF);
+    Constructor constructor = Terms.constructor(pF);
     return switch (constructor) {
-      case YICES_BOOL_CONST -> pVisitor.visitConstant(pFormula, yices_bool_const_value(pF));
-      case YICES_ARITH_CONST -> pVisitor.visitConstant(pFormula, convertValue(pF, pF));
-      case YICES_BV_CONST -> pVisitor.visitConstant(pFormula, convertValue(pF, pF));
-      case YICES_LAMBDA_TERM ->
+      case BOOL_CONSTANT -> pVisitor.visitConstant(pFormula, Terms.boolConstValue(pF));
+      case ARITH_CONSTANT -> pVisitor.visitConstant(pFormula, convertValue(pF, pF));
+      case BV_CONSTANT -> pVisitor.visitConstant(pFormula, convertValue(pF, pF));
+      case LAMBDA_TERM ->
           // We use lambda terms as array constants
           pVisitor.visitFunction(
               pFormula,
-              ImmutableList.of(encapsulateWithTypeOf(yices_term_child(pF, 1))),
+              ImmutableList.of(encapsulateWithTypeOf(Terms.child(pF, 1))),
               FunctionDeclarationImpl.of(
                   "const",
                   FunctionDeclarationKind.CONST,
-                  ImmutableList.of(getFormulaType(yices_term_child(pF, 1))),
+                  ImmutableList.of(getFormulaType(Terms.child(pF, 1))),
                   getFormulaType(pF),
                   0));
-      case YICES_UNINTERPRETED_TERM ->
-          pVisitor.visitFreeVariable(pFormula, yices_get_term_name(pF));
-      case YICES_VARIABLE -> pVisitor.visitBoundVariable(pFormula, 0);
-      case YICES_FORALL_TERM -> visitQuantifier(pVisitor, pFormula, pF, Quantifier.FORALL);
+      case FORALL_TERM -> visitQuantifier(pVisitor, pFormula, pF, Quantifier.FORALL);
+      case UNINTERPRETED_TERM -> pVisitor.visitFreeVariable(pFormula, lookupName(pF));
       default -> visitFunctionApplication(pVisitor, pFormula, pF, constructor);
     };
   }
@@ -416,134 +304,176 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
     int[] freeVars = new int[boundVars.length];
     for (int i = 0; i < boundVars.length; i++) {
       // use from cached variable mapping
-      freeVars[i] =
-          createNamedVariable(yices_type_of_term(boundVars[i]), yices_get_term_name(boundVars[i]));
+      freeVars[i] = createNamedVariable(Terms.typeOf(boundVars[i]), Terms.getName(boundVars[i]));
     }
 
     int body = Iterables.getLast(args);
     if (pQuantifier == Quantifier.EXISTS) {
-      body = yices_not(body); // EXISTS is an alias for NOT(FORALL(x, NOT(body)))
+      body = Terms.not(body); // EXISTS is an alias for NOT(FORALL(x, NOT(body)))
     }
-    int substBody = yices_subst_term(freeVars.length, boundVars, freeVars, body);
+    int substBody = Terms.subst(body, boundVars, freeVars);
 
     return pVisitor.visitQuantifier(
         (BooleanFormula) pFormula,
         pQuantifier,
-        Ints.asList(freeVars).stream().map(this::encapsulateWithTypeOf).toList(),
+        Ints.asList(freeVars).stream()
+            .map(this::encapsulateWithTypeOf)
+            .collect(Collectors.toList()),
         encapsulateBoolean(substBody));
   }
 
   private <R> R visitFunctionApplication(
-      FormulaVisitor<R> pVisitor, Formula pFormula, int pF, final int constructor) {
-
-    // Map built-in constructors in negative int to avoid collision with UFs.
-    int functionDeclaration = -constructor;
-
-    assert !CONSTANT_AND_VARIABLE_CONSTRUCTORS.contains(constructor)
-        : "Term %s with constructor %d should be handled somewhere else"
-            .formatted(yices_term_to_string(pF), constructor);
-
+      FormulaVisitor<R> pVisitor, Formula pFormula, int pF, final Constructor constructor) {
     // filled later, except for some special function applications
     String functionName = null;
+    Integer functionDeclaration = null;
     List<Integer> functionArgs = null;
-
-    if (constructor == YICES_NOT_TERM && isNestedExists(pF)) {
-      int existsTerm = Iterables.getOnlyElement(getArgs(pF));
-      return visitQuantifier(pVisitor, pFormula, existsTerm, Quantifier.EXISTS);
-    }
+    List<Integer> functionIndex = ImmutableList.of();
 
     // filled directly when handling the function application
-    final FunctionDeclarationKind functionKind =
-        switch (constructor) {
-          case YICES_ITE_TERM -> FunctionDeclarationKind.ITE;
-          case YICES_APP_TERM -> {
-            var fun = yices_term_child(pF, 0);
-            if (ufSymbols.contains(fun)) {
-              functionArgs = getArgs(pF);
-              functionName = yices_get_term_name(functionArgs.get(0));
-              functionDeclaration = functionArgs.get(0);
-              functionArgs.remove(0);
-              yield FunctionDeclarationKind.UF;
-            } else {
-              functionArgs = getArgs(pF);
-              functionName = "select";
-              functionDeclaration = -YICES_ARRAY_SELECT;
-              yield FunctionDeclarationKind.SELECT;
-            }
+    FunctionDeclarationKind functionKind;
+
+    switch (constructor) {
+      case ITE_TERM -> functionKind = FunctionDeclarationKind.ITE;
+      case APP_TERM -> {
+        var fun = Terms.child(pF, 0);
+        if (ufSymbols.contains(fun)) {
+          functionKind = FunctionDeclarationKind.UF;
+          var args = getArgs(pF);
+          var f = args.get(0);
+          var x = FluentIterable.from(args).skip(1).toList();
+          functionName = lookupName(f);
+          functionDeclaration = f;
+          functionArgs = x;
+        } else {
+          functionKind = FunctionDeclarationKind.SELECT;
+          functionArgs = getArgs(pF);
+          functionName = "select";
+          var f = Terms.newVariable(Terms.typeOf(functionArgs.get(0)));
+          var x = Terms.newVariable(Terms.typeOf(functionArgs.get(1)));
+          functionDeclaration = Terms.lambda(new int[] {f, x}, Terms.funApplication(f, x));
+        }
+      }
+      case UPDATE_TERM -> {
+        functionKind = FunctionDeclarationKind.STORE;
+        functionArgs = getArgs(pF);
+        var f = Terms.newVariable(Terms.typeOf(functionArgs.get(0)));
+        var x = Terms.newVariable(Terms.typeOf(functionArgs.get(1)));
+        var y = Terms.newVariable(Terms.typeOf(functionArgs.get(2)));
+        functionDeclaration = Terms.lambda(new int[] {f, x, y}, Terms.functionUpdate1(f, x, y));
+      }
+      case EQ_TERM -> functionKind = FunctionDeclarationKind.EQ;
+      case DISTINCT_TERM -> functionKind = FunctionDeclarationKind.DISTINCT;
+      case NOT_TERM -> {
+        if (isNestedExists(pF)) {
+          int existsTerm = Iterables.getOnlyElement(getArgs(pF));
+          return visitQuantifier(pVisitor, pFormula, existsTerm, Quantifier.EXISTS);
+        } else if (isNestedConjunction(pF)) {
+          functionKind = FunctionDeclarationKind.AND;
+          functionArgs = getNestedConjunctionArgs(pF);
+        } else {
+          functionKind = FunctionDeclarationKind.NOT;
+        }
+      }
+      case OR_TERM -> functionKind = FunctionDeclarationKind.OR;
+      case XOR_TERM -> functionKind = FunctionDeclarationKind.XOR;
+      case BV_DIV -> functionKind = FunctionDeclarationKind.BV_UDIV;
+      case BV_REM -> functionKind = FunctionDeclarationKind.BV_UREM;
+      case BV_SDIV -> functionKind = FunctionDeclarationKind.BV_SDIV;
+      case BV_SREM -> functionKind = FunctionDeclarationKind.BV_SREM;
+      case BV_SMOD -> functionKind = FunctionDeclarationKind.BV_SMOD;
+      case BV_SHL -> functionKind = FunctionDeclarationKind.BV_SHL;
+      case BV_LSHR -> functionKind = FunctionDeclarationKind.BV_LSHR;
+      case BV_ASHR -> functionKind = FunctionDeclarationKind.BV_ASHR;
+      case BV_GE_ATOM -> functionKind = FunctionDeclarationKind.BV_UGE;
+      case BV_SGE_ATOM -> functionKind = FunctionDeclarationKind.BV_SGE;
+      case ARITH_GE_ATOM -> functionKind = FunctionDeclarationKind.GTE;
+      case FLOOR -> functionKind = FunctionDeclarationKind.FLOOR;
+      case RDIV -> functionKind = FunctionDeclarationKind.DIV;
+      case IDIV -> functionKind = FunctionDeclarationKind.DIV;
+      case IMOD -> functionKind = FunctionDeclarationKind.MODULO;
+      case SELECT_TERM -> functionKind = FunctionDeclarationKind.SELECT;
+      case BV_SUM -> {
+        if (Terms.numChildren(pF) == 1) {
+          functionKind = FunctionDeclarationKind.BV_MUL;
+          functionArgs = getOnlySumTerm(pF);
+        } else {
+          functionKind = FunctionDeclarationKind.BV_ADD;
+          var terms = getSumTerms(pF);
+          var right =
+              terms.size() > 2
+                  ? Terms.bvAdd(FluentIterable.from(terms).skip(1).toList())
+                  : terms.get(1);
+          functionArgs = ImmutableList.of(terms.get(0), right);
+        }
+      }
+      case ARITH_SUM -> {
+        if (Terms.numChildren(pF) == 1) {
+          functionKind = FunctionDeclarationKind.MUL;
+          functionArgs = getOnlySumTerm(pF);
+        } else {
+          functionKind = FunctionDeclarationKind.ADD;
+          functionArgs = getSumTerms(pF);
+        }
+      }
+      case POWER_PRODUCT -> {
+        if (Terms.isBitvector(pF)) {
+          functionKind = FunctionDeclarationKind.BV_MUL;
+          var factors = getProductFactors(pF);
+          var right = factors.get(1);
+          for (var p = 2; p < factors.size(); p++) {
+            right = Terms.bvMul(right, factors.get(p));
           }
-          case YICES_UPDATE_TERM -> {
-            functionArgs =
+          functionArgs = ImmutableList.of(factors.get(0), right);
+        } else {
+          functionKind = FunctionDeclarationKind.MUL;
+          functionArgs = getProductFactors(pF);
+        }
+      }
+      case BIT_TERM -> {
+        // Yices rewrites most "bitwise" operations on bitvectors, f.ex bvand(a,b) becomes
+        // (bool-to-bv (and (bit a k) (bit b k)) (and (bit a k-1) (bit b k-1)) ...)
+        // Here (bit a k) returns the k-th bit of the bitvector as a boolean, and bool-to-bv is
+        // used to (re)construct the bitvector from a vector of boolean terms
+        // Since "bit" and "bool-to-bv" are not supported by the visitor, we have to undo the
+        // transformation here
+
+        // Rewrite (bit x n) to (= (extract x n n) #b1). Yices will then further simplify to
+        // (= (bool-to-bv (bit x n)) #b1)
+        // We visit the outer "=" and handle the rest in the arguments
+        functionKind = FunctionDeclarationKind.EQ;
+        functionArgs =
+            ImmutableList.of(
+                Terms.bvExtract(Terms.projArg(pF), Terms.projIndex(pF), Terms.projIndex(pF)),
+                Terms.bvConst(1, 1));
+      }
+      case BV_ARRAY -> {
+        if (Terms.numChildren(pF) == 1) {
+          if (Terms.constructor(Terms.child(pF, 0)) == Constructor.BIT_TERM) {
+            // Rewrite (bool-to-bv (bit x n)) to (extract x n n)
+            functionKind = FunctionDeclarationKind.BV_EXTRACT;
+            functionIndex =
                 ImmutableList.of(
-                    yices_term_child(pF, 0), yices_term_child(pF, 1), yices_term_child(pF, 2));
-            functionDeclaration = -YICES_UPDATE_TERM;
-            yield FunctionDeclarationKind.STORE;
+                    Terms.projIndex(Terms.child(pF, 0)), Terms.projIndex(Terms.child(pF, 0)));
+            functionArgs = ImmutableList.of(Terms.projArg(Terms.child(pF, 0)));
+          } else {
+            // Rewrite (bool-to-bv _) to (ite _ #1 #0)
+            functionKind = FunctionDeclarationKind.ITE;
+            functionArgs =
+                ImmutableList.of(Terms.child(pF, 0), Terms.bvConst(1, 1), Terms.bvConst(1, 0));
           }
-          case YICES_EQ_TERM -> FunctionDeclarationKind.EQ; // Covers all equivalences
-          case YICES_DISTINCT_TERM -> FunctionDeclarationKind.DISTINCT;
-          case YICES_NOT_TERM -> {
-            if (isNestedConjunction(pF)) {
-              functionArgs = getNestedConjunctionArgs(pF);
-              functionDeclaration = -YICES_AND;
-              yield FunctionDeclarationKind.AND;
-            } else {
-              yield FunctionDeclarationKind.NOT;
-            }
-          }
-          case YICES_OR_TERM -> FunctionDeclarationKind.OR;
-          case YICES_XOR_TERM -> FunctionDeclarationKind.XOR;
-          case YICES_BV_DIV -> FunctionDeclarationKind.BV_UDIV;
-          case YICES_BV_REM -> FunctionDeclarationKind.BV_UREM;
-          case YICES_BV_SDIV -> FunctionDeclarationKind.BV_SDIV;
-          case YICES_BV_SREM -> FunctionDeclarationKind.BV_SREM;
-          case YICES_BV_SMOD -> FunctionDeclarationKind.BV_SMOD;
-          case YICES_BV_SHL -> FunctionDeclarationKind.BV_SHL;
-          case YICES_BV_LSHR -> FunctionDeclarationKind.BV_LSHR;
-          case YICES_BV_ASHR -> FunctionDeclarationKind.BV_ASHR;
-          case YICES_BV_GE_ATOM -> FunctionDeclarationKind.BV_UGE;
-          case YICES_BV_SGE_ATOM -> FunctionDeclarationKind.BV_SGE;
-          case YICES_ARITH_GE_ATOM -> FunctionDeclarationKind.GTE;
-          case YICES_FLOOR -> FunctionDeclarationKind.FLOOR;
-          case YICES_RDIV -> FunctionDeclarationKind.DIV;
-          case YICES_IDIV -> FunctionDeclarationKind.DIV;
-          case YICES_SELECT_TERM -> FunctionDeclarationKind.SELECT;
-          case YICES_BV_SUM -> {
-            if (yices_term_num_children(pF) == 1) {
-              functionArgs = getMultiplyBvSumArgsFromSum(pF);
-              functionDeclaration = -YICES_BV_MUL;
-              yield FunctionDeclarationKind.BV_MUL;
-            } else {
-              functionArgs = getBvSumArgs(pF);
-              yield FunctionDeclarationKind.BV_ADD;
-            }
-          }
-          case YICES_ARITH_SUM -> {
-            if (yices_term_num_children(pF) == 1) {
-              functionArgs = getMultiplySumArgsFromSum(pF);
-              functionDeclaration = -YICES_POWER_PRODUCT;
-              yield FunctionDeclarationKind.MUL;
-            } else {
-              functionArgs = getSumArgs(pF);
-              yield FunctionDeclarationKind.ADD;
-            }
-          }
-          case YICES_POWER_PRODUCT -> {
-            if (yices_type_is_bitvector(yices_type_of_term(pF))) {
-              functionArgs = getMultiplyArgs(pF, true);
-              functionDeclaration = -YICES_BV_MUL;
-              // TODO Product of more then 2 bitvectors ?
-              yield FunctionDeclarationKind.BV_MUL;
-            } else {
-              functionArgs = getMultiplyArgs(pF, false);
-              yield FunctionDeclarationKind.MUL;
-            }
-          }
-          case YICES_BIT_TERM -> {
-            functionArgs = getBitArgs(pF);
-            yield FunctionDeclarationKind.BV_EXTRACT;
-          }
-          case YICES_BV_ARRAY -> FunctionDeclarationKind.BV_CONCAT;
-          default -> FunctionDeclarationKind.OTHER;
-        };
+        } else {
+          // Rewrite (bool-to-bv a b ...) to (concat ... (ite b #1 #0) (ite a #1 #0))
+          functionKind = FunctionDeclarationKind.BV_CONCAT;
+          functionArgs =
+              transformedImmutableListCopy(
+                      getArgs(pF),
+                      p -> Terms.ifThenElse(p, Terms.bvConst(1, 1), Terms.bvConst(1, 0)))
+                  .reverse();
+        }
+      }
+      default -> throw new UnsupportedOperationException(constructor.toString());
+    }
 
     if (functionName == null) {
       functionName = functionKind.toString();
@@ -551,8 +481,12 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
     if (functionArgs == null) {
       functionArgs = getArgs(pF);
     }
+    if (functionDeclaration == null) {
+      functionDeclaration = buildDeclaration(functionKind, functionIndex, functionArgs);
+    }
 
-    final ImmutableList<FormulaType<?>> argTypes = ImmutableList.copyOf(toType(functionArgs));
+    final ImmutableList<FormulaType<?>> argTypes =
+        ImmutableList.copyOf(Lists.transform(functionArgs, this::getFormulaType));
 
     Preconditions.checkState(
         functionArgs.size() == argTypes.size(),
@@ -574,8 +508,214 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
             functionName, functionKind, argTypes, getFormulaType(pF), functionDeclaration));
   }
 
-  private List<FormulaType<?>> toType(final List<Integer> args) {
-    return Lists.transform(args, this::getFormulaType);
+  private int buildDeclaration(
+      FunctionDeclarationKind pKind, List<Integer> pIndex, List<Integer> pArgs) {
+    ImmutableList.Builder<Integer> builder = ImmutableList.builder();
+    int c = 0;
+    for (var arg : pArgs) {
+      builder.add(Terms.newVariable("var" + c++, Terms.typeOf(arg)));
+    }
+    var args = builder.build();
+    int f =
+        switch (pKind) {
+          case AND -> Terms.and(args);
+          case NOT -> {
+            checkArgument(args.size() == 1);
+            yield Terms.not(args.get(0));
+          }
+          case OR -> Terms.or(args);
+          case IFF -> {
+            checkArgument(args.size() == 2);
+            yield Terms.iff(args.get(0), args.get(1));
+          }
+          case ITE -> {
+            checkArgument(args.size() == 3);
+            yield Terms.ifThenElse(args.get(0), args.get(1), args.get(2));
+          }
+          case XOR -> Terms.xor(args);
+          case IMPLIES -> {
+            checkArgument(args.size() == 2);
+            yield Terms.implies(args.get(0), args.get(1));
+          }
+          case DISTINCT -> Terms.distinct(args);
+          case STORE -> {
+            checkArgument(args.size() == 3);
+            yield Terms.functionUpdate1(args.get(0), args.get(1), args.get(2));
+          }
+          case SELECT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.funApplication(args.get(0), args.get(1));
+          }
+          case CONST -> {
+            checkArgument(args.size() == 1);
+            yield Terms.lambda(new int[] {}, args.get(0));
+          }
+          case UMINUS -> {
+            checkArgument(args.size() == 1);
+            yield Terms.neg(args.get(0));
+          }
+          case SUB -> {
+            checkArgument(args.size() == 2);
+            yield Terms.sub(args.get(0), args.get(1));
+          }
+          case ADD -> Terms.add(args);
+          case DIV -> {
+            checkArgument(args.size() == 2);
+            yield Terms.div(args.get(0), args.get(1));
+          }
+          case MUL -> Terms.mul(args);
+          case MODULO -> {
+            checkArgument(args.size() == 2);
+            yield Terms.imod(args.get(0), args.get(1));
+          }
+          case UF, VAR -> throw new IllegalArgumentException("Expecting builtin kind");
+          case LT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.arithLt(args.get(0), args.get(1));
+          }
+          case LTE -> {
+            checkArgument(args.size() == 2);
+            yield Terms.arithLeq(args.get(0), args.get(1));
+          }
+          case GT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.arithGt(args.get(0), args.get(1));
+          }
+          case GTE -> {
+            checkArgument(args.size() == 2);
+            yield Terms.arithGeq(args.get(0), args.get(1));
+          }
+          case EQ -> {
+            checkArgument(args.size() == 2);
+            yield Terms.eq(args.get(0), args.get(1));
+          }
+          case EQ_ZERO -> throw new UnsupportedOperationException("EQ_ZERO not supported");
+          case GTE_ZERO -> throw new UnsupportedOperationException("GTE_ZERO not supported");
+          case FLOOR -> {
+            checkArgument(args.size() == 1);
+            yield Terms.floor(args.get(0));
+          }
+          case TO_REAL -> throw new UnsupportedOperationException("TO_REAL not supported");
+          case INT_TO_BV -> throw new UnsupportedOperationException("INT_TO_BV not supported");
+          case BV_EXTRACT -> {
+            checkArgument(args.size() == 1 && pIndex.size() == 2);
+            yield Terms.bvExtract(args.get(0), pIndex.get(0), pIndex.get(1));
+          }
+          case BV_CONCAT -> Terms.bvConcat(args);
+          case BV_SIGN_EXTENSION -> {
+            checkArgument(args.size() == 1);
+            yield Terms.bvSignExtend(args.get(0), pIndex.get(0));
+          }
+          case BV_ZERO_EXTENSION -> {
+            checkArgument(args.size() == 1);
+            yield Terms.bvZeroExtend(args.get(0), pIndex.get(0));
+          }
+          case BV_NOT -> {
+            checkArgument(args.size() == 1);
+            yield Terms.bvNot(args.get(0));
+          }
+          case BV_NEG -> {
+            checkArgument(args.size() == 1);
+            yield Terms.bvNeg(args.get(0));
+          }
+          case BV_OR -> Terms.bvOr(args);
+          case BV_AND -> Terms.bvAnd(args);
+          case BV_XOR -> Terms.bvXor(args);
+          case BV_SUB -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSub(args.get(0), args.get(1));
+          }
+          case BV_ADD -> Terms.bvAdd(args);
+          case BV_SDIV -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSDiv(args.get(0), args.get(1));
+          }
+          case BV_UDIV -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvDiv(args.get(0), args.get(1));
+          }
+          case BV_SREM -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSRem(args.get(0), args.get(1));
+          }
+          case BV_UREM -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvRem(args.get(0), args.get(1));
+          }
+          case BV_SMOD -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSMod(args.get(0), args.get(1));
+          }
+          case BV_MUL -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvMul(args.get(0), args.get(1));
+          }
+          case BV_ULT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvLt(args.get(0), args.get(1));
+          }
+          case BV_SLT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSLt(args.get(0), args.get(1));
+          }
+          case BV_ULE -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvLe(args.get(0), args.get(1));
+          }
+          case BV_SLE -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSLe(args.get(0), args.get(1));
+          }
+          case BV_UGT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvGt(args.get(0), args.get(1));
+          }
+          case BV_SGT -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSGt(args.get(0), args.get(1));
+          }
+          case BV_UGE -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvGe(args.get(0), args.get(1));
+          }
+          case BV_SGE -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvSGe(args.get(0), args.get(1));
+          }
+          case BV_EQ -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvEq(args.get(0), args.get(1));
+          }
+          case BV_SHL -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvShl(args.get(0), args.get(1));
+          }
+          case BV_LSHR -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvLshr(args.get(0), args.get(1));
+          }
+          case BV_ASHR -> {
+            checkArgument(args.size() == 2);
+            yield Terms.bvAshr(args.get(0), args.get(1));
+          }
+          case BV_ROTATE_LEFT ->
+              throw new UnsupportedOperationException("BV_ROTATE_LEFT not supported");
+          case BV_ROTATE_RIGHT ->
+              throw new UnsupportedOperationException("BV_ROTATE_RIGHT not supported");
+          case BV_ROTATE_LEFT_BY_INT -> {
+            checkArgument(args.size() == 1);
+            yield Terms.bvRotateLeft(args.get(0), pIndex.get(0));
+          }
+          case BV_ROTATE_RIGHT_BY_INT -> {
+            checkArgument(args.size() == 1);
+            yield Terms.bvRotateRight(args.get(0), pIndex.get(0));
+          }
+          case UBV_TO_INT -> throw new UnsupportedOperationException("UBV_TO_INT not supported");
+          case SBV_TO_INT -> throw new UnsupportedOperationException("SBV_TO_INT not supported");
+          case OTHER -> throw new UnsupportedOperationException("OTHER not supported");
+          default -> throw new UnsupportedOperationException();
+        };
+    return Terms.lambda(args, f);
   }
 
   /**
@@ -585,14 +725,14 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
    * of Yices</a>.
    */
   private static boolean isNestedExists(int outerTerm) {
-    return yices_term_constructor(outerTerm) == YICES_NOT_TERM
-        && yices_term_constructor(yices_term_child(outerTerm, 0)) == YICES_FORALL_TERM;
+    return Terms.constructor(outerTerm) == Constructor.NOT_TERM
+        && Terms.constructor(Terms.child(outerTerm, 0)) == Constructor.FORALL_TERM;
   }
 
   /** Yices transforms <code>AND(x,...)</code> into <code>NOT(OR(NOT(X),NOT(...))</code>. */
   private static boolean isNestedConjunction(int outerTerm) {
-    return yices_term_constructor(outerTerm) == YICES_NOT_TERM
-        && yices_term_constructor(yices_term_child(outerTerm, 0)) == YICES_OR_TERM;
+    return Terms.constructor(outerTerm) == Constructor.NOT_TERM
+        && Terms.constructor(Terms.child(outerTerm, 0)) == Constructor.OR_TERM;
   }
 
   /**
@@ -601,261 +741,139 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
    * <p>Only call this method for terms that are nested conjunctions!
    */
   private static List<Integer> getNestedConjunctionArgs(int outerTerm) {
-    checkArgument(yices_term_constructor(outerTerm) == YICES_NOT_TERM);
-    int middleTerm = yices_term_child(outerTerm, 0);
-    checkArgument(yices_term_constructor(middleTerm) == YICES_OR_TERM);
+    checkArgument(Terms.constructor(outerTerm) == Constructor.NOT_TERM);
+    int middleTerm = Terms.child(outerTerm, 0);
+    checkArgument(Terms.constructor(middleTerm) == Constructor.OR_TERM);
     List<Integer> result = new ArrayList<>();
     for (int child : getArgs(middleTerm)) {
-      result.add(yices_not(child));
+      result.add(Terms.not(child));
     }
     return result;
   }
 
   private static List<Integer> getArgs(int parent) {
-    try {
-      return getArgs0(parent);
-    } catch (IllegalArgumentException e) {
-      throw new IllegalArgumentException("problematic term: " + yices_term_to_string(parent), e);
+    ImmutableList.Builder<Integer> children = ImmutableList.builder();
+    for (int i = 0; i < Terms.numChildren(parent); i++) {
+      children.add(Terms.child(parent, i));
+    }
+    return children.build();
+  }
+
+  /** <code>1</code> for the given theory. */
+  private static int mkOne(int type) {
+    if (Types.isArithmetic(type)) {
+      return Terms.one();
+    } else if (Types.isBitvector(type)) {
+      return Terms.bvOne(Types.bvSize(type));
+    } else {
+      throw new IllegalArgumentException();
     }
   }
 
-  private static List<Integer> getArgs0(int parent) {
-    List<Integer> children = new ArrayList<>();
-    for (int i = 0; i < yices_term_num_children(parent); i++) {
-      children.add(yices_term_child(parent, i));
-    }
-    return children;
-  }
-
-  private static List<Integer> getSumArgs(int parent) {
-    List<Integer> children = new ArrayList<>();
-    for (int i = 0; i < yices_term_num_children(parent); i++) {
-      String[] child = yices_sum_component(parent, i);
-      String coeff = child[0];
-      int term = Integer.parseInt(child[1]);
-      if (term == -1) { // No term just a number
-        children.add(yices_parse_rational(coeff));
+  /** Convert value to constant term. */
+  private static int toConstant(Object value) {
+    if (value instanceof BigRational rational) {
+      if (rational.isInteger()) {
+        return Terms.intConst(rational.getNumerator());
       } else {
-        int coeffTerm = yices_parse_rational(coeff);
-        children.add(yices_mul(coeffTerm, term));
+        return Terms.rationalConst(rational);
+      }
+    } else if (value instanceof boolean[] array) {
+      ImmutableList.Builder<Integer> builder = ImmutableList.builder();
+      for (var bit : array) {
+        builder.add(bit ? 1 : 0);
+      }
+      return Terms.bvConst(builder.build());
+    } else {
+      throw new IllegalArgumentException();
+    }
+  }
+
+  /** Multiply two arithmetic or bv terms. */
+  private static int mkMultiply(int a, int b) {
+    if (Terms.isArithmetic(a) && Terms.isArithmetic(b)) {
+      return Terms.mul(a, b);
+    } else if (Terms.isBitvector(a) && Terms.isBitvector(b)) {
+      return Terms.bvMul(a, b);
+    } else {
+      throw new IllegalArgumentException();
+    }
+  }
+
+  /**
+   * Returns a list of terms for a sum.
+   *
+   * <p>Splits a sum <code>a*t1 + b*t2 + ...</code> into a list of terms <code>a*t1</code>, <code>
+   * b*t2</code>, ...
+   */
+  private static List<Integer> getSumTerms(int parent) {
+    ImmutableList.Builder<Integer> terms = ImmutableList.builder();
+    for (int i = 0; i < Terms.numChildren(parent); i++) {
+      SumComponent<?> component = Terms.projSum(parent, i);
+      var factor = toConstant(component.getFactor());
+      var term =
+          component.getTerm() == Terms.NULL_TERM
+              ? mkOne(Terms.typeOf(parent))
+              : component.getTerm();
+
+      terms.add(mkMultiply(factor, term));
+    }
+    return terms.build();
+  }
+
+  /**
+   * Returns coefficient and term for a sum with only a single term.
+   *
+   * <p>Splits the sum term <code>Σ a*t</code> into <code>a</code> and <code>t</code>
+   */
+  private static List<Integer> getOnlySumTerm(int parent) {
+    checkArgument(Terms.numChildren(parent) == 1);
+    SumComponent<?> component = Terms.projSum(parent, 0);
+    checkArgument(component.getTerm() != Terms.NULL_TERM);
+    return ImmutableList.of(toConstant(component.getFactor()), component.getTerm());
+  }
+
+  /**
+   * Returns a list of factors for a product term.
+   *
+   * <p>Splits a product <code>a^m * b^n * ...</code> into a list of individual factors <code>a
+   * </code> * ... * <code>b</code> * ...
+   */
+  private static List<Integer> getProductFactors(int parent) {
+    ImmutableList.Builder<Integer> builder = ImmutableList.builder();
+    for (int i = 0; i < Terms.numChildren(parent); i++) {
+      ProductComponent component = Terms.projProduct(parent, i);
+      for (int k = 0; k < component.getPower(); k++) {
+        builder.add(component.getTerm());
       }
     }
-    return children;
-  }
-
-  /** extract all entries of a BV sum like "3*x + 2*y + 1". */
-  private static List<Integer> getBvSumArgs(int parent) {
-    List<Integer> children = new ArrayList<>();
-    int bitsize = yices_term_bitsize(parent);
-    for (int i = 0; i < yices_term_num_children(parent); i++) {
-      int[] component = yices_bvsum_component(parent, i, bitsize);
-      assert component.length == bitsize + 1;
-      // the components consist of coefficient (as bits) and variable (if missing: -1)
-      int coeff = yices_bvconst_from_array(bitsize, Arrays.copyOfRange(component, 0, bitsize));
-      int term = component[component.length - 1];
-      if (term == -1) { // No term
-        children.add(coeff);
-      } else {
-        children.add(yices_bvmul(coeff, term));
-      }
-    }
-    return children;
-  }
-
-  /** extract -1 and X from the sum of one element [-1*x]. */
-  private static List<Integer> getMultiplyBvSumArgsFromSum(int parent) {
-    checkArgument(yices_term_num_children(parent) == 1);
-    int bitsize = yices_term_bitsize(parent);
-    int[] component = yices_bvsum_component(parent, 0, bitsize);
-    int coeff = yices_bvconst_from_array(bitsize, Arrays.copyOfRange(component, 0, bitsize));
-    int term = component[component.length - 1];
-    checkArgument(term != -1, "unexpected constant coeff without variable");
-    return ImmutableList.of(coeff, term);
-  }
-
-  /** extract -1 and X from the sum of one element [-1*x]. */
-  private static List<Integer> getMultiplySumArgsFromSum(int parent) {
-    checkArgument(yices_term_num_children(parent) == 1);
-    String[] child = yices_sum_component(parent, 0);
-    int term = Integer.parseInt(child[1]);
-    checkArgument(term != -1, "unexpected constant coeff without variable");
-    int coeffTerm = yices_parse_rational(child[0]);
-    return ImmutableList.of(coeffTerm, term);
-  }
-
-  private static List<Integer> getMultiplyArgs(int parent, boolean isBV) {
-    // TODO Add exponent?
-    List<Integer> result = new ArrayList<>();
-    for (int i = 0; i < yices_term_num_children(parent); i++) {
-      int[] component = yices_product_component(parent, i);
-      if (isBV) {
-        result.add(yices_bvpower(component[0], component[1]));
-      } else {
-        result.add(yices_power(component[0], component[1])); // add term, ignore exponent
-      }
-    }
-    return result;
-  }
-
-  /** get "index" and "b" from "(bit index b)". */
-  private static List<Integer> getBitArgs(int parent) {
-    return ImmutableList.of(yices_proj_arg(parent), yices_int32(yices_proj_index(parent)));
+    return builder.build();
   }
 
   @Override
   public Integer callFunctionImpl(Integer pDeclaration, List<Integer> pArgs) {
-    if (pDeclaration < 0) { // is constant function application from API
-      // TODO add more cases
-      // if something bad happens here,
-      // in most cases the solution is a fix in the method visitFunctionApplication
-      return switch (-pDeclaration) {
-        case YICES_ITE_TERM -> {
-          checkArgsLength("YICES_ITE_TERM", pArgs, 3);
-          yield yices_ite(pArgs.get(0), pArgs.get(1), pArgs.get(2));
-        }
-        case YICES_EQ_TERM -> {
-          checkArgsLength("YICES_EQ_TERM", pArgs, 2);
-          yield yices_eq(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_DISTINCT_TERM -> yices_distinct(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_NOT_TERM -> {
-          checkArgsLength("YICES_NOT_TERM", pArgs, 1);
-          yield yices_not(pArgs.get(0));
-        }
-        case YICES_OR_TERM -> yices_or(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_XOR_TERM -> yices_xor(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_BV_DIV -> {
-          checkArgsLength("YICES_BV_DIV", pArgs, 2);
-          yield yices_bvdiv(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_REM -> {
-          checkArgsLength("YICES_BV_REM", pArgs, 2);
-          yield yices_bvrem(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_SDIV -> {
-          checkArgsLength("YICES_BV_SDIV", pArgs, 2);
-          yield yices_bvsdiv(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_SREM -> {
-          checkArgsLength("YICES_BV_SREM", pArgs, 2);
-          yield yices_bvsrem(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_SMOD -> {
-          checkArgsLength("YICES_BV_SMOD", pArgs, 2);
-          yield yices_bvsmod(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_SHL -> {
-          checkArgsLength("YICES_BV_SHL", pArgs, 2);
-          yield yices_bvshl(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_LSHR -> {
-          checkArgsLength("YICES_BV_LSHR", pArgs, 2);
-          yield yices_bvlshr(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_ASHR -> {
-          checkArgsLength("YICES_BV_ASHR", pArgs, 2);
-          yield yices_bvashr(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_GE_ATOM -> {
-          checkArgsLength("YICES_BV_GE_ATOM", pArgs, 2);
-          yield yices_bvge_atom(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_SGE_ATOM -> {
-          checkArgsLength("YICES_BV_SGE_ATOM", pArgs, 2);
-          yield yices_bvsge_atom(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_ARITH_GE_ATOM -> {
-          checkArgsLength("YICES_ARITH_GE_ATOM", pArgs, 2);
-          yield yices_arith_geq_atom(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_ABS -> {
-          checkArgsLength("YICES_ABS", pArgs, 1);
-          yield yices_abs(pArgs.get(0));
-        }
-        case YICES_CEIL -> {
-          checkArgsLength("YICES_CEIL", pArgs, 1);
-          yield yices_ceil(pArgs.get(0));
-        }
-        case YICES_FLOOR -> {
-          checkArgsLength("YICES_FLOOR", pArgs, 1);
-          yield yices_floor(pArgs.get(0));
-        }
-        case YICES_RDIV -> {
-          checkArgsLength("YICES_RDIV", pArgs, 2);
-          yield yices_division(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_IDIV -> {
-          checkArgsLength("YICES_IDIV", pArgs, 2);
-          yield yices_idiv(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_IMOD -> {
-          checkArgsLength("YICES_IMOD", pArgs, 2);
-          yield yices_imod(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_IS_INT_ATOM -> {
-          checkArgsLength("YICES_IS_INT_ATOM", pArgs, 1);
-          yield yices_is_int_atom(pArgs.get(0));
-        }
-        case YICES_DIVIDES_ATOM -> {
-          checkArgsLength("YICES_DIVIDES_ATOM", pArgs, 2);
-          yield yices_divides_atom(pArgs.get(0), pArgs.get(1));
-        }
-        case YICES_BV_SUM -> yices_bvsum(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_ARITH_SUM -> yices_sum(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_POWER_PRODUCT -> yices_product(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_BIT_TERM -> {
-          checkArgsLength("YICES_BIT_TERM", pArgs, 2);
-          yield yices_bitextract(pArgs.get(0), toInt(pArgs.get(1)));
-        }
-        case YICES_BV_ARRAY -> yices_bvarray(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_BV_MUL -> yices_bvproduct(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_AND -> yices_and(pArgs.size(), Ints.toArray(pArgs));
-        case YICES_ARRAY_SELECT -> yices_application(pArgs.get(0), 1, new int[] {pArgs.get(1)});
-        case YICES_UPDATE_TERM ->
-            yices_update(pArgs.get(0), 1, new int[] {pArgs.get(1)}, pArgs.get(2));
-        default ->
-            throw new IllegalArgumentException(
-                "Unknown function declaration with constructor %d and arguments %s (%s)"
-                    .formatted(
-                        -pDeclaration,
-                        pArgs,
-                        Lists.transform(pArgs, Yices2NativeApi::yices_term_to_string)));
-      };
-    } else { // is UF Application
-      if (pArgs.isEmpty()) {
-        return pDeclaration;
-      } else {
-        int[] argArray = Ints.toArray(pArgs);
-        int app = yices_application(pDeclaration, argArray.length, argArray);
-        return app;
-      }
+    if (Terms.isFunction(pDeclaration)) {
+      checkArgument(
+          Types.numChildren(Terms.typeOf(pDeclaration)) == 1 + pArgs.size(),
+          "Expecting %s arguments, but found %s",
+          Types.numChildren(Terms.typeOf(pDeclaration)) - 1,
+          pArgs.size());
+      return Terms.funApplication(pDeclaration, Ints.toArray(pArgs));
+    } else {
+      checkArgument(pArgs.isEmpty(), "Expecting no arguments, but found %s", pArgs.size());
+      return pDeclaration;
     }
-  }
-
-  private int toInt(int termId) {
-    assert yices_term_is_int(termId);
-    return Integer.parseInt(yices_rational_const_value(termId));
-  }
-
-  private void checkArgsLength(String kind, List<Integer> pArgs, final int expectedLength) {
-    checkArgument(
-        pArgs.size() == expectedLength,
-        "%s with %s expected arguments was called with unexpected arguments: %s",
-        kind,
-        expectedLength,
-        Collections2.transform(pArgs, Yices2NativeApi::yices_term_to_string));
   }
 
   @Override
   public Integer declareUFImpl(String pName, Integer pReturnType, List<Integer> pArgTypes) {
-    int size = pArgTypes.size();
     int[] argTypeArray = Ints.toArray(pArgTypes);
     final int yicesFuncType;
     if (pArgTypes.isEmpty()) {
       // a nullary function is a plain symbol (variable)
       yicesFuncType = pReturnType;
     } else {
-      yicesFuncType = yices_function_type(size, argTypeArray, pReturnType);
+      yicesFuncType = Types.functionType(argTypeArray, pReturnType);
     }
     int uf = createNamedVariable(yicesFuncType, pName);
     ufSymbols.add(uf);
@@ -864,51 +882,82 @@ class Yices2FormulaCreator extends FormulaCreator<Integer, Integer, Long, Intege
 
   @Override
   protected Integer getBooleanVarDeclarationImpl(Integer pTFormulaInfo) {
-    return yices_term_constructor(pTFormulaInfo);
+    return pTFormulaInfo;
   }
 
   private Object parseNumeralValue(Integer pF, FormulaType<?> type) {
     checkArgument(
-        yices_term_constructor(pF) == YICES_ARITH_CONST,
+        Terms.isArithConstant(pF),
         "Term: '%s' with type '%s' is not an arithmetic constant",
-        yices_term_to_string(pF),
-        yices_type_to_string(yices_type_of_term(pF)));
+        Terms.toString(pF),
+        Types.toString(Terms.typeOf(pF)));
 
-    String value = yices_rational_const_value(pF);
     if (type.isRationalType()) {
-      Rational ratValue = Rational.of(value);
-      return ratValue.isIntegral() ? ratValue.getNum() : ratValue;
+      var rational = Terms.arithConstValue(pF);
+      return rational.isInteger()
+          ? rational.getNumerator()
+          : Rational.of(rational.getNumerator(), rational.getDenominator());
     } else if (type.isIntegerType()) {
-      return new BigInteger(value);
+      return Terms.arithConstValue(pF).getNumerator();
     } else {
       throw new IllegalArgumentException("Unexpected type: " + type);
     }
   }
 
+  /**
+   * Converts an array of booleans into a BigInteger value.
+   *
+   * <p>Assumes "little endian" encoding
+   */
+  static BigInteger bitsToInteger(boolean[] bits) {
+    // FIXME We're treating the bv as unsigned. Should we return a signed value instead?
+    var value = BigInteger.ZERO;
+    for (var p = 0; p < bits.length; p++) {
+      if (bits[p]) {
+        value = value.setBit(p);
+      }
+    }
+    return value;
+  }
+
+  /**
+   * Converts a BigInteger into an array of booleans.
+   *
+   * <p>Inverse of {@link #bitsToInteger}
+   */
+  static boolean[] integerToBits(int bitsize, BigInteger value) {
+    checkArgument(bitsize >= value.bitLength());
+
+    var bits = new boolean[bitsize];
+    for (int p = 0; p < value.bitLength(); p++) {
+      bits[p] = value.testBit(p);
+    }
+    return bits;
+  }
+
   private BigInteger parseBitvector(int pF) {
     checkArgument(
-        yices_term_constructor(pF) == YICES_BV_CONST,
-        "Term: '%s' is not a bitvector constant",
-        yices_term_to_string(pF));
+        Terms.isBvConstant(pF), "Term: '%s' is not a bitvector constant", Terms.toString(pF));
+    return bitsToInteger(Terms.bvConstValue(pF));
+  }
 
-    int[] littleEndianBV = yices_bv_const_value(pF, yices_term_bitsize(pF));
-    checkArgument(littleEndianBV.length != 0, "BV was empty");
-    String bigEndianBV = Joiner.on("").join(Lists.reverse(Ints.asList(littleEndianBV)));
-    return new BigInteger(bigEndianBV, 2);
+  public boolean isArrayVariable(int term) {
+    checkArgument(Terms.isFunction(term));
+    checkArgument(Terms.isUninterpreted(term));
+    return !ufSymbols.contains(term);
   }
 
   @Override
   public Object convertValue(Integer typeKey, Integer pF) {
     FormulaType<?> type = getFormulaType(typeKey);
     if (type.isBooleanType()) {
-      return pF.equals(yices_true());
+      return pF.equals(Terms.mkTrue());
     } else if (type.isRationalType() || type.isIntegerType()) {
       return parseNumeralValue(pF, type);
     } else if (type.isBitvectorType()) {
       return parseBitvector(pF);
     } else {
-      throw new IllegalArgumentException(
-          "Unexpected type: " + yices_type_to_string(yices_type_of_term(pF)));
+      throw new IllegalArgumentException("Unexpected type: " + Types.toString(Terms.typeOf(pF)));
     }
   }
 }
